fixed z-index of tooltip

--- a/css/index.css
+++ b/css/index.css
@@ -278,6 +278,7 @@ body {
 
 .tooltip-structure {
   top: 66%;
+  z-index: 2;
 }
 
 .elements-wrapper {
